新增大气数据服务器和安卓对接功能；新增单灯控制器数据模块功能；新增传感器更新定位胡等信息；优化调整led功能；优化灯杆页面刷新功能；百度地图功能模块进一步开发；

--- a/src/main/webapp/WEB-INF/templates/advertisement/advertisementList.html
+++ b/src/main/webapp/WEB-INF/templates/advertisement/advertisementList.html
@@ -277,7 +277,7 @@
     </form>
   </div>
   <!--/* </editor-fold> */-->
-</main>
+</main>delete-name
 
 <th:block th:include="/common/footer::footer"/>
 <th:block th:include="/common/script::script"/>
