--- a/src/main/webapp/WEB-INF/templates/advertisementMachine/advertisementMachineForm.html
+++ b/src/main/webapp/WEB-INF/templates/advertisementMachine/advertisementMachineForm.html
@@ -61,9 +61,9 @@
 
         <div class="input-field col s6 m6 l6" >
           <i class="material-icons prefix">place</i>
-          <input id="address" name="address" type="text" class="validate" placeholder="输入地址"
-                 th:value="${machine.address}"/>
-          <label for="address">广告机地址</label>
+          <input id="addrStr" name="addrStr" type="text" class="validate" placeholder="输入地址"
+                 th:value="${machine.addrStr}"/>
+          <label for="addrStr">广告机地址</label>
         </div>
 
         <div class="input-field col s6 m6 l6" >
