--- a/src/main/webapp/WEB-INF/templates/baiduMap/baiduMap.html
+++ b/src/main/webapp/WEB-INF/templates/baiduMap/baiduMap.html
@@ -17,7 +17,9 @@
 </head>
 <body>
 <!--/*@thymesVar id="loginUser" type="com.xmlan.machine.module.user.entity.User"*/-->
-<!--/*@thymesVar id="page" type="com.github.pagehelper.PageInfo<com.xmlan.machine.module.advertisementMachine.entity.AdvertisementMachine>"*/-->
+<!--/*@thymesVar id="page" type="com.github.pagehelper.PageInfo<com.xmlan.machine.module.machineGroup.entity.MachineGroup>"*/-->
+<!--/*@thymesVar id="machineGroupList" type="java.util.List<com.xmlan.machine.module.machineGroup.entity.MachineGroup.>"*/-->
+<!--/*@thymesVar id="machine" type="com.xmlan.machine.module.advertisementMachine.entity.AdvertisementMachine"*/-->
 <!--/*@thymesVar id="adminPath" type="java.lang.String"*/-->
 <!--/*@thymesVar id="adminRoleID" type="java.lang.Integer"*/-->
 <main style="z-index: 0;padding-left: 0px">
@@ -114,13 +116,10 @@
     <div style="display: flex;float: left">
             <h5 style="width: 150px;height: 45px;margin: 20px">当前分组：</h5>
             <select style="display: inline-block;width: 200px;height: 45px;float: left;margin: 10px">
-                <option>-- 请选择 --</option>
-                <option>第一街区</option>
-                <option>第二街区</option>
-                <option>第三街区</option>
+                <option th:each="item:${machineGroupList}" th:value="*{item.id}" th:text="*{item.getGroupName()}"></option>
             </select>
             <button style="display: flex;width: 80px;height: 45px;float: left;margin-top: 10px;background-color: #00c1de;text-align: center;" onclick="addGroup()">添加分组</button>
-        <button style="display: flex;width: 80px;height: 45px;float: left;margin-top: 10px;background-color: #00c1de;text-align: center;" id="updateGroup" onclick="updateGroup()">编辑分组</button>
+        <button style="display: flex;width: 80px;height: 45px;float: left;margin-top: 10px;background-color: #00c1de;text-align: center;" id="updateGroup" onclick="updateGroup(1)">编辑分组</button>
             <select style="display: inline-block;width: 200px;height: 45px;float: left;margin: 10px;margin-left: 100px">
                 <option>-- 请选择 --</option>
                 <option value="1">正常开灯</option>
@@ -134,17 +133,39 @@
             <a href="javascript:closeBatch()" class="material-icons" style="margin-left: 300px;">clear</a>
     </div>
 </div>
-<div id="updateGroupDiv" class="groupBatch" style="z-index:9999;position:fixed;margin-left: 20%; top: 30%;border:5px solid #a9c9e2;background:#e8f5fe;width: 50%;height: 40%;display: none">
+<div id="updateGroupDiv" class="groupBatch" style="z-index:9999;position:fixed;margin-left: 20%; top: 30%;border:5px solid #a9c9e2;background:#e8f5fe;width: 50%;height: 480px;display: none">
     <h5 style="text-align: center">分组列表</h5>
     <a href="javascript:closeGroup()" class="material-icons" style="margin-left: 900px;">clear</a>
     <table class="highlight responsive-table" >
         <thead>
         <tr>
             <th>分组名称</th>
+            <th>分组设备</th>
             <th>删除</th>
         </tr>
         </thead>
+        <tbody class="card">
+        <tr th:each="item:${page.list}">
+            <td th:text="*{item.groupName}">groupName</td>
+            <td th:text="*{item.machineID}">machineID</td>
+            <td >删除</td>
+        </tr>
+        </tbody>
     </table>
+    <div id="pagination-div" class="center">
+        <ul class="pagination">
+            <li  class="waves-effect">
+                <h6 >共<b th:text="${page.total}"></b>条结果</h6>
+                <a href="#"><i class="material-icons">chevron_left</i></a>
+            </li>
+            <th:block th:each="number:${page.navigatepageNums}">
+                <li class="waves-effect">
+                    <a th:onclick="'javascript:updateGroup('+${number}+')'"
+                       th:text="${number}"></a>
+                </li>
+            </th:block>
+        </ul>
+    </div>
 </div>
     <form>
         <div id="addGroupDiv" class="groupBatch" style="z-index:9999;position:fixed;margin-left: 20%; top: 20%;border:5px solid #a9c9e2;background:#e8f5fe;width: 50%;height: 60%;display: none">
@@ -161,10 +182,10 @@
                 </thead>
             </table>
             <div style="position:absolute; bottom:100px;">
-                <input  name="checkbox" value="2" type="checkbox">确认选择
+                确认选择
                 <input id="txt" value=""  style="width:500px;" readonly="readonly" type="text">
                 <input id="groupName" type="text" placeholder="输入分组名称" style="width: 200px" name="ok">
-                <button type="button">确认加入分组</button>
+                <button type="button" onclick="confirmAddGroup()">确认加入分组</button>
             </div>
             <div class="pageDiv"style="position:absolute; bottom:0px;margin-left: 30%">
                 <ul >
@@ -191,6 +212,7 @@
     var firstPage = 0;
     $(function () {
         $("#detail-modal").modal();
+        $("#delete-modal").modal();
         toast('[[${message}]]');
         $.ajax({
             url: '[[${adminPath}]]/baiduMap/index',
@@ -321,7 +343,7 @@
                     var address =data[idx].address;
                     var tr =
                         "<tr>"+
-                        "<td><input type=\"checkbox\" name=\"checkbox\"></td>"+
+                        "<td><input type=\"checkbox\" name=\"checkbox\" value="+id+" onclick=\"checkboxOnclick(this)\"></td>"+
                         "<td>"+id+"</td>"+
                         "<td>"+name+"</td>"+
                         "<td>"+address+"</td>"+
@@ -352,7 +374,7 @@
                     var address =data[idx].address;
                     var tr =
                         "<tr>"+
-                        "<td><input type=\"checkbox\" name=\"checkbox\"></td>"+
+                        "<td><input type=\"checkbox\" name=\"checkbox\" value="+id+" onclick=\"checkboxOnclick(this)\"></td>"+
                         "<td>"+id+"</td>"+
                         "<td>"+name+"</td>"+
                         "<td>"+address+"</td>"+
@@ -369,7 +391,6 @@
     }
 
     $('input[name="checkbox"]').change(function(){
-        console.log(789789)
         var result="";
         $("input[name='checkbox']:checked").each(function(){
             result+=$(this).val()+'、';
@@ -379,6 +400,26 @@
         }
         $("#txt").val(result);
     });
+    $('[type="checkbox"]').click(function () {
+        console.log("shuchu")
+    });
+    function confirmAddGroup() {
+        var ids = $("#txt").val();
+        var name = $("#groupName").val();
+        $.ajax({
+            url:'[[${adminPath}]]/machineGroup/adddGroup',
+            data:{"ids":ids,"name":name},
+            dataType:"json",
+            type:"post",
+            success:function () {
+                console.log("456456")
+
+            },error:function () {
+
+            }
+        });
+        previousPage();
+    }
     function checkboxOnclick() {
         var result="";
         console.log(111)
@@ -423,29 +464,43 @@
     }
 
     //添加编辑分组页面
-    function updateGroup() {
+    function updateGroup(pageNo) {
         var group = document.getElementById("updateGroupDiv").style.display ="block";
         var closeGroup = document.getElementById("addGroupDiv").style.display ="none";
-        $('#updateGroupDiv table tr').html("");
+        $('#updateGroupDiv table tbody').html("");
         $.ajax({
-            url:'[[${adminPath}]]/machineGroup/groupList',
+            url:'[[${adminPath}]]/machineGroup/groupList/'+pageNo,
             type:"GET",
             success:function (machine) {
-                console.log(machine)
                 machineStr =eval('(' + machine + ')');
                 $.each(machineStr,function (idx, obj) {
                     var name;
                     name =machineStr[idx].groupName;
+                    var machines = machineStr[idx].machineID;
+                    var id = machineStr[idx].id;
                     var tr =
                         "<tr>"+
                         "<td>"+name+"</td>"+
-                        "<td>"+"删除"+"</td>"+
+                        "<td>"+machines+"</td>"+
+                        "<td>"+"<a onclick='deleteGroup(\""+id+"\")'>删除</a>"+"</td>"+
                         "</tr>";
                     $("table").append(tr);
                 });
             }
         });
-
+    }
+    function deleteGroup(id) {
+        // console.log($("#delete-modal").css('display'))
+        $.ajax({
+            url:'[[${adminPath}]]/machineGroup/delete',
+            data:{"id":id},
+            type:"GET",
+            success:function () {
+                updateGroup(1);
+            },error:function () {
+                updateGroup(1);
+            }
+        });
     }
     //创建标注点并添加到地图中
     function addMarker(points) {
