--- a/src/main/webapp/WEB-INF/templates/common/header.html
+++ b/src/main/webapp/WEB-INF/templates/common/header.html
@@ -46,10 +46,18 @@
           </th:block>
           <th:block th:switch="${module}">
             <li class="active" th:case="'circuit'">
-              <a th:href="@{${adminPath}+'/circuit/index'}" class="waves-effect waves-teal" >路灯电路管理<i class="material-icons">format_paint</i></a>
+              <a th:href="@{${adminPath}+'/circuit/index'}" class="waves-effect waves-teal" >路灯电路管理<i class="material-icons">wb_incandescent</i></a>
             </li>
             <li th:case="*">
-              <a th:href="@{${adminPath}+'/circuit/index'}" class="waves-effect waves-teal">路灯电路管理<i class="material-icons">format_paint</i></a>
+              <a th:href="@{${adminPath}+'/circuit/index'}" class="waves-effect waves-teal">路灯电路管理<i class="material-icons">wb_incandescent</i></a>
+            </li>
+          </th:block>
+          <th:block th:switch="${module}">
+            <li class="active" th:case="'singLamp'">
+              <a th:href="@{${adminPath}+'/singLamp/list/1'}" class="waves-effect waves-teal" >单灯控制管理<i class="material-icons">collections</i></a>
+            </li>
+            <li th:case="*">
+              <a th:href="@{${adminPath}+'/singLamp/list/1'}" class="waves-effect waves-teal">单灯控制管理<i class="material-icons">collections</i></a>
             </li>
           </th:block>
           <th:block th:switch="${module}">
@@ -73,15 +81,18 @@
               <a th:href="@{${adminPath}+'/xixunAD/list/1'}" class="waves-effect waves-teal">LED广告屏<i class="material-icons">format_indent_increase</i></a>
             </li>
             <li th:case="*">
+              <a th:href="@{${adminPath}+'/xixunAD/list/1'}" class="waves-effect waves-teal">LED媒体文件管理<i class="material-icons">format_indent_increase</i></a>
+            </li>
+            <li th:case="*">
               <a th:href="@{${adminPath}+'/xixunAD/list/1'}" class="waves-effect waves-teal">LED广告屏<i class="material-icons">format_indent_increase</i></a>
             </li>
           </th:block>
           <th:block th:switch="${module}">
             <li class="active" th:case="'baiduMap'">
-              <a th:href="@{${adminPath}+'/baiduMap/map'}" class="waves-effect waves-teal">灯杆地图<i class="material-icons">location_on</i></a>
+              <a th:href="@{${adminPath}+'/baiduMap/map/1'}" class="waves-effect waves-teal">灯杆地图<i class="material-icons">location_on</i></a>
             </li>
             <li th:case="*">
-              <a th:href="@{${adminPath}+'/baiduMap/map'}" class="waves-effect waves-teal">灯杆地图<i class="material-icons">location_on</i></a>
+              <a th:href="@{${adminPath}+'/baiduMap/map/1'}" class="waves-effect waves-teal">灯杆地图<i class="material-icons">location_on</i></a>
             </li>
           </th:block>
           <th:block th:switch="${module}">
