--- a/src/main/webapp/WEB-INF/templates/xixun/xixunAD.html
+++ b/src/main/webapp/WEB-INF/templates/xixun/xixunAD.html
@@ -77,7 +77,7 @@
                 <select style="display: block;width: 200px" class="form-control">
                     <option value="image/*">视频</option>
                 </select>
-                <form th:action="@{${adminPath}+'/xixunAD/downloadFileToLocal'}" method="post" enctype="multipart/form-data">
+                <form th:action="@{${adminPath}+'/xixunAD/upload'}" method="post" enctype="multipart/form-data">
                     <input type="file" name="file"  accept="video/*">
                     <input type="text" style="display: none" name="led" id="led" value="">
                     <a class="material-icons"><input type="submit" value="提交视频文件">file_upload</a>
@@ -153,6 +153,7 @@
         </div>
         <div th:if="${loginUser.id}==1">
             <input class="" type="button" onclick="invokeJs()" value="第二部">
+            <input class="" type="button" onclick="startActivity('y10-a18-00006')" value="启动">
             <!--<input class="" type="button" onclick="callCardService()" value="设置屏幕开关">-->
         </div>
         <div id="weather-modal" class="modal modal-fixed-footer" style="height: 300px;width: 200px">
@@ -339,6 +340,7 @@
                 $("#led_").val(code);
                 $("#led_code").val(jsonObj[0].led);
                 $("#led").val(code);
+                // startActivity(led);
             },error:function () {
                 console.log("失败！")
             }
