--- a/src/main/webapp/WEB-INF/templates/xixun/xixunAD.html
+++ b/src/main/webapp/WEB-INF/templates/xixun/xixunAD.html
@@ -77,7 +77,7 @@
                 <select style="display: block;width: 200px" class="form-control">
                     <option value="image/*">视频</option>
                 </select>
-                <form th:action="@{${adminPath}+'/xixunAD/upload'}" method="post" enctype="multipart/form-data">
+                <form th:action="@{${adminPath}+'/xixunAD/downloadFileToLocal'}" method="post" enctype="multipart/form-data">
                     <input type="file" name="file"  accept="video/*">
                     <input type="text" style="display: none" name="led" id="led" value="">
                     <a class="material-icons"><input type="submit" value="提交视频文件">file_upload</a>
