--- a/src/main/webapp/WEB-INF/templates/common/script.html
+++ b/src/main/webapp/WEB-INF/templates/common/script.html
@@ -6,6 +6,8 @@
   <script type="text/javascript" src="../../../static/materialize/js/materialize.min.js"></script>
   <script type="text/javascript" src="../../../static/application/js/date-picker.js"></script>
   <script type="text/javascript" src="../../../static/application/js/global.js"></script>
+  <script type="text/javascript" src="../../../static/layer/layer.js"></script>
+  <script type="text/javascript" src="../../../static/layer/mobile/layer.js"></script>
 </div>
 </body>
 </html>
